OR-1593 Fix z-index of the dropdown menu in contact list

--- a/modules/linagora.esn.contact/frontend/css/styles.less
+++ b/modules/linagora.esn.contact/frontend/css/styles.less
@@ -293,3 +293,7 @@ contact-edition-form {
     }
   }
 }
+
+.actions {
+  z-index: auto;
+}
